--- a/workspace/files/ui/templates/files/ui/partials/new_menu.html
+++ b/workspace/files/ui/templates/files/ui/partials/new_menu.html
@@ -5,7 +5,7 @@
       class="gap-3 rounded"
       @click="showCreateFolderDialog(); document.activeElement.blur()"
     >
-      <i data-lucide="folder-plus" class="w-4 h-4 text-warning"></i>
+      <i data-lucide="folder-plus" class="w-4 h-4"></i>
       <div class="flex-1">
         <div class="font-medium">New Folder</div>
         <div class="text-xs text-base-content/60">Create a new folder</div>
@@ -18,7 +18,7 @@
       class="gap-3 rounded"
       @click="showCreateFileDialog(); document.activeElement.blur()"
     >
-      <i data-lucide="file-text" class="w-4 h-4 text-primary"></i>
+      <i data-lucide="file-text" class="w-4 h-4"></i>
       <div class="flex-1">
         <div class="font-medium">New File</div>
         <div class="text-xs text-base-content/60">Create a blank file</div>
@@ -27,12 +27,13 @@
   </li>
   <li>
     <label class="gap-3 rounded cursor-pointer">
-      <i data-lucide="file-plus" class="w-4 h-4 text-info"></i>
+      <i data-lucide="file-plus" class="w-4 h-4"></i>
       <div class="flex-1">
         <div class="font-medium">Upload Files</div>
         <div class="text-xs text-base-content/60">Select files from your computer</div>
       </div>
       <input
+        id="file-upload-input"
         type="file"
         class="hidden"
         multiple
@@ -43,7 +44,7 @@
   <div class="divider my-1"></div>
   <li>
     <label class="gap-3 rounded cursor-pointer">
-      <i data-lucide="folder-open" class="w-4 h-4 text-success"></i>
+      <i data-lucide="folder-open" class="w-4 h-4"></i>
       <div class="flex-1">
         <div class="font-medium">Upload Folder</div>
         <div class="text-xs text-base-content/60">Upload entire folder</div>
